[package]
name = "cpc"
version = "1.9.0"
description = "evaluates math expressions, with support for units and conversion between units"
authors = ["Varun TM"]
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Varun-TM/cpc-keyshell-jenkins-task1.git#readme"
repository = "https://github.com/Varun-TM/cpc-keyshell-jenkins-task1.git"
documentation = "https://docs.rs/cpc"
keywords = ["math", "expression", "evaluate", "units", "convert"]
categories = ["mathematics", "science", "parsing", "text-processing", "value-formatting"]

[dependencies]
decimal = "2.1"
unicode-segmentation = "1.9"

[dev-dependencies]
regex = "1.6"
